# RBTC_Tank_Mine_system

./: README.md
RBTC_CAD Models/: hayet hilwi.md
RBTC_CAD Models/SLDWRKS_FILES/: attach_pin_left.SLDPRT  attach_pin_right.SLDPRT  claw_finger_left.SLDPRT  claw_finger_right.SLDPRT  claw_gear_left.SLDPRT  claw_gear_right.SLDPRT  ~$arm_rot_link.SLDPRT
RBTC_CAD Models/SLDWRKS_FILES/Collission files/: arm_rot_link_collission.SLDPRT  attach_left_collission.SLDPRT  attach_right_collission.SLDPRT  base_link_collission.SLDPRT  claw_finger_left_collission.SLDPRT  claw_finger_right_collission.SLDPRT  claw_gear_left_collission.SLDPRT  claw_gear_right_collission.SLDPRT  pan_link_collission.SLDPRT  tilt_link2_collission.SLDPRT  tilt_link3_collission.SLDPRT  tilt_link_collission.SLDPRT
src/Robotic_arm_package/RBTC_ARM/install/: local_setup.sh  setup.sh
src/Robotic_arm_package/RBTC_ARM/install/rbtc_arm_description/share/rbtc_arm_description/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/URDF_FILES_RBTC/RBTC_ASSEM_COMBINED/: CMakeLists.txt  package.xml
src/URDF_FILES_RBTC/RBTC_ASSEM_COMBINED/config/: joint_names_RBTC_ASSEM_COMBINED.yaml
src/URDF_FILES_RBTC/RBTC_ASSEM_COMBINED/launch/: display.launch  gazebo.launch
src/URDF_FILES_RBTC/RBTC_ASSEM_COMBINED/meshes/: attach_left.STL  attach_right.STL  claw_finger_right.STL  claw_gear_right.STL
src/URDF_FILES_RBTC/RBTC_ASSEM_COMBINED/urdf/: RBTC_ASSEM_COMBINED.csv  RBTC_ASSEM_COMBINED.urdf
tanl/: readme
(+6 files in other folders)
